--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <artifactId>jackson-datatype-guava</artifactId>
             <version>2.9.6</version>
         </dependency>
+        <!-- Java Mail邮件 -->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
     </dependencies>
 
     <build>
